	* params.c: New file.
	* params.h: Likewise.
	* params.def: Likewise.
	* toplev.c: Include params.h.
	(lang_independent_params): New variable.
	(decode_f_option): Use the param machinery instead of setting
	max_inline_insns.
	(independent_decode_option): Handle "--param name=value".
	(main): Register language-independent parameters.

Thu Mar  1 09:44:15 2001  Jeffrey A Law  (law@cygnus.com)

	* pa.c (emit_move_sequence): Verify operand0 is a hard register
	before determining its register class.

2001-03-01  Bernd Schmidt  <bernds@redhat.com>

	* config/ia64/ia64.c (ia64_hard_regno_rename_ok): Disallow renaming
	from reg 4 if current_function_calls_setjmp.
	(ia64_sched_reorder): Move code that rotates bundles up a bit.

	* reload1.c (eliminate_regs_in_insn): Restrict the special case
	code not to try to optimize adds with anything but a REG destination.

	* sched-int.h (struct haifa_insn_data): Add new member priority_known.
	(INSN_PRIORITY_KNOWN): New accessor macro.
	* haifa-sched.c (priority): Use it instead of testing priority against
	zero.

2001-02-28  Neil Booth  <neil@daikokuya.demon.co.uk>

        * cppinit.c (builtin_array): Update.
        (init_builtins): Flag builtins to warn if redefined or
        undefined.  Define __GXX_WEAK as a normal macro.
        * cpplib.c (do_undef): Warn if flagged NODE_WARN.
        * cpplib.h (NODE_WARN): New flag.
        * cppmacro.c (builtin_macro): Remove handling of __GXX_WEAK__.
        Handle __STDC__ as a builtin only on Solaris.
        (warn_of_redefinition): Renamed from check_macro_definition.
        Reverse sense of test.  Always warn if NODE_WARN.
        (_cpp_create_definition): Use warn_of_redefinition.  Flag
        any macro beginning with "__STDC_" to require a mandatory
        warning if redefined or undefined.
        * cppinit.c (set_lang):  Move builtin handling to...
        (init_builtins): ...here.
        (_cpp_create_reader): Move call to set_lang.